codeserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: olehalv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
        - name: codeserver
          image: ghcr.io/coder/code-server:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 12Mi
            limits:
              memory: 24Mi
